calico/tigera-manager/manager-tcproute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: manager-tcp-route
  namespace: tigera-manager
spec:
  parentRefs:
    - name: manager-gateway
      namespace: tigera-manager 	
      sectionName: manager
  rules:
    - backendRefs:
        - name: tigera-manager
          port: 9443
          namespace: tigera-manager
